<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Movie Apps</string>
    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="todo">TODO</string>
    <string name="overview">Overview</string>
    <string name="original_title">Original Title</string>
    <string name="something_wrong">Failed to Load Data…</string>
    <string name="release_date">Release Date</string>
    <string name="first_release_date">First Release Date</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movies</string>
    <string name="favorite_tv">Favorite TV</string>
    <string name="list_movies_favorite">Movies Favorite</string>
    <string name="list_tv_favorite">TV Favorite</string>
    <string name="delete_all_favorite">Delete All Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_To_Favorite">Add To Favorites List?</string>
    <string name="remove_From_Favorite">Remove From Favorites List?</string>
    <string name="success_add">Adding Favorites Successfully</string>
    <string name="success_remove">Successfully Deleted Favorite</string>
    <string name="delete_favorite">Delete All Favorite Lists?</string>
    <string name="search">Search</string>
    <string name="search_movie">Search For Movies</string>
    <string name="search_tv">Search For Serials TV</string>
    <string name="search_no_data">Search Not Found</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">Data Not Found</string>
    <string name="film_favorite">Film Favorite</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_description">Reminder for return the app</string>
    <string name="reminder">Reminder Option</string>
    <string name="release_reminder_title">Release Reminder</string>
    <string name="release_reminder_description">Reminder showing the movie release today</string>
    <string name="setting">Setting</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="msg_daily_reminder">Hi, movie apps are waiting for you!</string>
    <string name="release_today">Release Today Reminder</string>
    <string name="release_no_data">Film No Release Today</string>
    <string name="search_result_movie">Search Results Movie</string>
    <string name="search_result_tv">Search Results TV Show</string>
</resources>
