<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:title="@string/setting"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolBarStyle"
            app:title="@string/setting" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="@dimen/margin16"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin16"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/daily_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:text="@string/daily_reminder_title"
                    android:textStyle="bold"
                    android:textSize="@dimen/textContent"/>

                <TextView
                    android:id="@+id/daily_description"
                    android:layout_width="wrap_content"
                    android:textColor="@color/overview"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_reminder_description" />
            </LinearLayout>

            <Switch
                android:id="@+id/daily_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin16"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/release_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_reminder_title"
                    android:textColor="@color/title"
                    android:textStyle="bold"
                    android:textSize="@dimen/textContent"/>

                <TextView
                    android:id="@+id/release_description"
                    android:textColor="@color/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_reminder_description" />
            </LinearLayout>

            <Switch
                android:id="@+id/release_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on"/>
        </LinearLayout>
        <Button
            android:id="@+id/change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/title"
            android:text="@string/change_language"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>